<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="replenishNotify">补料单通知</string>
    <string name="please_input_eam_name">请输入设备名称</string>
    <string name="eam_point">节点</string>
    <string name="wom_create">创建补料单</string>
    <string name="wom_please_input_plan_num">请填写计划数量！</string>
    <string name="replenish_material_edit">补料编辑</string>
    <string name="replenish_material_scan">扫码补料</string>
    <string name="replenish_material_table">补料单</string>
    <string name="replenish_vessel">容器</string>
    <string name="replenish_create">创建</string>
    <string name="replenish_material_table_edit">补料单编辑</string>
    <string name="replenish_material_records">补料记录</string>
    <string name="replenish_choose_material">请选择物料</string>
    <string name="replenish_choose_eam">请选择设备</string>
    <string name="replenish_actual_num">实际数量</string>
    <string name="replenish_choose_or_scan_bucket">请选择或者扫描桶</string>
    <string name="replenish_bucket">补料桶</string>
    <string name="replenish_eam_ref">关联设备参照</string>
    <string name="wom_please_input_actual_num">请填写实际数量</string>
    <string name="common_choose_ref">参照选择</string>
    <string name="please_input_name">请输入名称</string>
    <string name="replenish_material_table_scan">补料单扫描</string>
    <string name="replenish_start_operate_open_valve">确认【开始】补料操作？确认将会打开设备阀门</string>
    <string name="replenish_end_operate">确认【结束】补料操作？</string>
    <string name="replenish_camera_scan">摄像头扫码</string>
    <string name="replenish_red_scan">设备红外扫码</string>
    <string name="replenish_quick_scan_bucket">快速扫桶补料</string>
    <string name="replenish_no_match_bucket">未能匹配桶号或正在补料中， 请再次确认！</string>
    <string name="replenish_no_match_eam">未能匹配设备（料仓），请再次确认！</string>
    <string name="replenish_no_match_air_port">未能匹配风送口，请再次确认！</string>
    <string name="replenish_no_match_load_point">未能匹配上料点，请再次确认！</string>
    <string name="replenish_check_failed_please_check_material_right">校验失败，请核对物料编码或者批号是否正确！</string>
    <string name="replenish_air_port">风送口</string>
    <string name="replenish_load_point">上料点</string>
    <string name="replenish_please_scan_air_port">请扫描风送口设备！</string>
    <string name="replenish_please_scan_load_point">请扫描上料点设备！</string>
    <string name="replenish_please_scan_eam">请扫描料仓设备！</string>
    <string name="replenish_no_match_current_material">非当前所需补料！</string>
    <string name="replenish_actual_assign_plan_num">实补/下达/需补</string>
    <string name="replenish_notify">补料通知</string>
</resources>