<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/ly_titlebar_local"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_above="@+id/workFlowView"
        android:orientation="vertical">
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            app:icon_res="@drawable/ic_into"
            android:id="@+id/eamPoint"
            android:tag="eamPoint"
            app:necessary="true"
            app:content_hint="@string/replenish_choose_eam"
            app:key="@string/scan_eam"
            app:key_size="14"
            app:content_color="@color/dark_text"
            app:editable="true"/>
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            app:icon_res="@drawable/ic_into"
            android:id="@+id/material"
            android:tag="material"
            app:necessary="true"
            app:content_hint="@string/replenish_choose_material"
            app:key="@string/wom_material"
            app:key_size="14"
            app:content_color="@color/dark_text"
            app:editable="true"/>
        <include layout="@layout/ly_line_light"/>
        <com.supcon.mes.mbap.view.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:id="@+id/planNum"
            android:tag="planNum"
            app:necessary="true"
            app:edit_hint="@string/wom_please_input_plan_num"
            app:key="@string/wom_plan_num"
            app:key_size="14"
            app:text_color="@color/dark_black"/>

        <com.supcon.mes.mbap.view.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:id="@+id/actualNum"
            android:tag="actualNum"
            app:necessary="true"
            app:edit_hint="@string/wom_please_input_actual_num"
            app:key="@string/replenish_actual_num"
            app:key_size="14"
            app:text_color="@color/dark_black"/>
        <include layout="@layout/ly_line_light"/>
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            app:icon_res="@drawable/ic_into"
            android:id="@+id/bucket"
            android:tag="bucket"
            app:necessary="true"
            app:content_hint="@string/replenish_choose_or_scan_bucket"
            app:key="@string/replenish_bucket"
            app:key_size="14"
            app:content_color="@color/dark_text"
            app:editable="true"/>

        <include layout="@layout/ly_detail_title_bar"/>

    </LinearLayout>

    <com.supcon.mes.mbap.view.CustomWorkFlowView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/workFlowView"
        android:tag="workFlowView"
        app:commentable="true"/>

</RelativeLayout>